<resources>
    <string name="app_name">e-Health</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello!</string>
    <string name="intro">Set up your account in three easy steps!</string>
    <string name="get_started">Get Started</string>
    <string name="next_step">Next Step</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="set_up_password">Set up Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="contact_details">Contact Details</string>
    <string name="personal_details">Personal Details</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="year_of_birth">Year Of Birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="password">Password</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="hospital_location">Hospital Location</string>
    <string name="year_of_births">Year of Birth</string>
    <string name="hospital">Hospital</string>
    <string name="private_practice">Private Practice</string>
</resources>
