<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.P_Registration.three"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/back_color">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scroll"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:src="@drawable/logo"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_details"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="#111"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:textSize="@dimen/text_size"
        android:textColor="#111"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/patientEmail"
        android:inputType="textEmailAddress"
        android:textSize="15sp"
        android:textColor="#111"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textSize="@dimen/text_size"
        android:textColor="#111"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/patientPhone"
        android:inputType="phone"
        android:textSize="15sp"
        android:layout_marginBottom="10dp"
        android:textColor="#111"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_up_password"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:textColor="#111"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:id="@+id/patientPass"
        android:inputType="textPassword"
        android:layout_marginBottom="15dp"
        android:textSize="@dimen/text_size"
        android:textColor="#111"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:id="@+id/patientPass2"
        android:inputType="textPassword"
        android:layout_marginBottom="25dp"
        android:textSize="@dimen/text_size"
        android:textColor="#111"/>



        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scroll"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/buttons_bg"
            android:clickable="true"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/create_account"
            android:textAlignment="center"
            android:textColor="#111"
            android:textSize="25sp"
            android:textStyle="bold"

            />
    </RelativeLayout>
</RelativeLayout>