<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.P_Registration.two"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/back_color">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:src="@drawable/logo"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_details"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textAlignment="center"
                android:layout_marginBottom="20dp"
                android:textColor="#111"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textSize="15sp"
                android:textColor="#111"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/patientFirstName"
                android:inputType="textPersonName"
                android:textSize="15sp"
                android:textColor="#111"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/middle_name"
                android:textSize="15sp"
                android:textColor="#111"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/patientMiddleName"
                android:inputType="textPersonName"
                android:textSize="15sp"
                android:textColor="#111"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textSize="15sp"
                android:textColor="#111"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/patientLastName"
                android:inputType="textPersonName"
                android:textSize="15sp"
                android:textColor="#111"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year_of_birth"
                android:textSize="15sp"
                android:textColor="#111"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:editable="false"
                android:focusable="true"
                android:id="@+id/patientDOB"
                android:inputType="date"
                android:layout_marginBottom="15dp"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="15sp"
                android:textColor="#111"/>
            <RadioGroup
                android:id="@+id/patientGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textSize="15sp"
                android:orientation="vertical"
                android:textColor="#111"
                >
                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/male"
                    android:textSize="15sp"
                    android:textColor="#111"
                    />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/female"
                    android:textSize="15sp"
                    android:textColor="#111"
                    />
            </RadioGroup>


        </LinearLayout>


    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scroll"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/two"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/next_step"
            android:layout_alignParentBottom="true"
            android:textStyle="bold"
            android:textColor="#111"
            android:background="@drawable/buttons_bg"
            android:textSize="25sp"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:clickable="true" />
    </RelativeLayout>

</LinearLayout>