<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Patient.PatientRegistration"
    android:padding="15dp"
    android:textSize="20dp"
    android:background="@drawable/back_color">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:src="@drawable/logo"
        android:id="@+id/log"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Patient Registration"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/log"
        android:textColor="#111"
        android:id="@+id/pg"
        />
    <ScrollView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:id="@+id/scroll"
        android:layout_below="@+id/pg"
        android:background="@drawable/forms"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personal_details"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:textColor="#111"
            />
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textSize="15sp"
        android:textColor="#111"
        android:id="@+id/fn"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="*"
        android:id="@+id/asteric"
        android:textColor="#f00"
        android:layout_toRightOf="@+id/fn"
        />

</RelativeLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/patientFirstName"
            android:inputType="textPersonName"
            android:textSize="15sp"
            android:textColor="#111"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/middle_name"
            android:textSize="15sp"
            android:textColor="#111"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/patientMiddleName"
            android:inputType="textPersonName"
            android:textSize="15sp"
            android:textColor="#111"
            />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textSize="15sp"
                android:textColor="#111"
                android:id="@+id/ln"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*"
                android:id="@+id/asteric2"
                android:textColor="#f00"
                android:layout_toRightOf="@+id/ln"
                />

        </RelativeLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/patientLastName"
            android:inputType="textPersonName"
            android:textSize="15sp"
            android:textColor="#111"
            />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year_of_birth"
                android:textSize="15sp"
                android:textColor="#111"
                android:id="@+id/yob"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*"
                android:id="@+id/asteric3"
                android:textColor="#f00"
                android:layout_toRightOf="@+id/yob"
                />
        </RelativeLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:editable="false"
            android:focusable="true"
            android:id="@+id/patientDOB"
            android:layout_marginBottom="15dp"
            android:textSize="15sp"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="15sp"
                android:textColor="#111"
                android:id="@+id/gtv"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*"
                android:textColor="#f00"
                android:layout_toRightOf="@+id/gtv"
                />
        </RelativeLayout>

        <RadioGroup
            android:id="@+id/patientGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:orientation="vertical"
            android:textColor="#111"
            >
            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/male"
                android:textSize="15sp"
                android:textColor="#111"
                />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/female"
                android:textSize="15sp"
                android:textColor="#111"
                />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_details"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#111"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_address"
                android:textSize="@dimen/text_size"
                android:textColor="#111"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*"
                android:textColor="#f00"
                android:layout_toRightOf="@+id/mail"
                />
        </RelativeLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/patientEmail"
            android:inputType="textEmailAddress"
            android:textSize="15sp"
            android:textColor="#111"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textSize="@dimen/text_size"
                android:textColor="#111"
                android:id="@+id/pn"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*"
                android:textColor="#f00"
                android:layout_toRightOf="@+id/pn"
                />
        </RelativeLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/patientPhone"
            android:inputType="phone"
            android:textSize="15sp"
            android:layout_marginBottom="10dp"
            android:textColor="#111"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_up_password"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:textColor="#111"

            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:id="@+id/patientPass"
            android:inputType="textPassword"
            android:layout_marginBottom="15dp"
            android:textSize="@dimen/text_size"
            android:textColor="#111"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:id="@+id/patientPass2"
            android:inputType="textPassword"
            android:layout_marginBottom="25dp"
            android:textSize="@dimen/text_size"
            android:textColor="#111"/>
        <TextView
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/buttons_bg"
            android:clickable="true"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/create_account"
            android:textAlignment="center"
            android:textColor="#111"
            android:textSize="25sp"
            android:textStyle="bold"

            />
    </LinearLayout>

    </ScrollView>




</RelativeLayout>

