<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.P_Registration.one"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/back_color">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/l">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:src="@drawable/logo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_marginBottom="30dp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/intro"
            android:textColor="@color/black"
            android:layout_marginBottom="30dp"/>
    </LinearLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/l">
    <TextView
        android:id="@+id/startbtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/get_started"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:background="@drawable/buttons_bg"
        android:textSize="25sp"
        android:textAlignment="center"
        android:gravity="center"
        android:clickable="true"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>




</RelativeLayout>